--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>pinga</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <title>
+            pinga
+        </title>
     </head>
     <body>
+
+        <nav>
+            <h1>Barra de navegación</h1>
+            <p>Una barra de menú</p>
+        </nav>
+
+        <section>
+            <h2>Esto es una sección de un documento</h2>
+            <article>
+                <h3>Imaginemos una sección de un artículo</h3>
+            </article>
+            <aside>
+                <h3>[barra lateral]</h3>
+            </aside>
+        </section>
+
+        <footer>
+            <h4>pie de página</h4>
+        </footer>
         
         <script src="" async defer></script>
     </body>
