--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <title>
-            pinga
-        </title>
+        <title>pinga</title>
     </head>
     <body>
 
