--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/masterstyle.css">
         <title>[ᓀ˵◇˵ᓂ]</title>
@@ -21,7 +20,7 @@
 
             <br>
                 <div class="uno">
-                    <h3><a href="https://www.youtube.com/watch?v=Kppx4bzfAaE&t=1s">CONTACTO</a></h3>
+                    <h3><a href="barra.html">CONTACTO</a></h3>
                 </div>
             <article>
                 <h3>Imaginemos una sección de un artículo</h3>
