--- a/barra.html
+++ b/barra.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/barra.css">
-    <title>Menu</title>
+    <title>Botones</title>
 </head>
 <body>
     <br>
@@ -30,12 +30,21 @@
 
     <button class="arrowButton" style="vertical-align:middle"><span>Hover </span></button>
 
+    <br>
+
     <div class="btn-group">
+        
+        <div class="animacion1"></div>
+        <div class="animated_div"></div>
+
+        <br>
+
         <button class="button">Button</button>
         <button class="button">Button</button>
         <button class="button">Button</button>
         <button class="button">Button</button>
-      </div>
+    </div>
+
     
 </body>
 </html>
