--- a/barra.html
+++ b/barra.html
@@ -11,9 +11,10 @@
     <br>
     <div class="header">
     <ul>
-        <li><a  href=#> Casa    </a></li>
+        <li><a  href=#> Home    </a></li>
         <li><a  href=#> About   </a></li>
         <li><a  href=#> Contact </a></li>
+        <li><a  href=#> ...     </a></li>
     </ul>
     </div>
 
