--- a/barra.html
+++ b/barra.html
@@ -14,7 +14,7 @@
         <li><a  href=#> Home    </a></li>
         <li><a  href=#> About   </a></li>
         <li><a  href=#> Contact </a></li>
-        <li><a  href=#> ...     </a></li>
+        <li class="item-r"><a  href=#> ...     </a></li>
     </ul>
     </div>
 
