--- a/barra.html
+++ b/barra.html
@@ -18,6 +18,10 @@
     </ul>
     </div>
 
+    <div class="uno">
+        <h3><a href="barra.html">CONTACTO</a></h3>
+    </div>
+
     <br>
 
     <button class="button button1">Green</button>
