--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
             <section class="img-light">
                 <img src="img/cerrar.svg" alt="" class="close">
-                <img src="img/teclado.jpg" alt="" class="agregar-imagen">
+                <img src="img/teclado.jpg" alt="" class="agregar-img">
             </section>
             <section class="contenedor" id="idEscpecial">
                 <h2 class="subtitulo">Con aptitudes para... </h2>
