--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <h1 class="titulo">Chico Lampart Ariadna</h1>
                 <p class="copy">Currículum vitae</p>
             </div>
+            <br>
+            <div class="animated_div"></div>
 
         </header>
 
@@ -95,16 +97,16 @@
                     <p>achicol1900@alumno.ipn.mx</p>
                 </div>
                 <div class="social-media">
-                    <a href="#" class="social-media-icon">
+                    <a href="https://www.google.com/" class="social-media-icon">
                         <i class='bx bxl-google' ></i>
                     </a>
-                    <a href="#" class="social-media-icon">
+                    <a href="https://www.facebook.com/" class="social-media-icon">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
-                    <a href="#" class="social-media-icon">
+                    <a href="https://www.instagram.com/" class="social-media-icon">
                         <i class='bx bxl-instagram' ></i>
                     </a>
-                    <a href="#" class="social-media-icon">
+                    <a href="https://twitter.com/" class="social-media-icon">
                         <i class='bx bxl-twitter' ></i>
                     </a>
                 </div>
