--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
                 <a href="#contacto">Contacto</a>
                 <a href="#estudios">Estudios</a>
                 <a href="#hobbies">Hobbies</a>
-                <a href="#uwu">uwu</a>
             </nav>
 
             <div class="contenedor head">
                 <h1 class="titulo">Chico Lampart Ariadna</h1>
                 <p class="copy">Currículum vitae</p>
             </div>
-            <br>
-            <div class="animated_div"></div>
+            <!-- <br>
+            <div class="animated_div"></div> -->
 
         </header>
 
