--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <header class="header" id="inicio">
             <img src="img/abrir.svg" alt="" class="open">
             <nav class="menu-navegacion">
-                <a href="#contacto">Contacto</a>
                 <a href="#estudios">Estudios</a>
                 <a href="#hobbies">Hobbies</a>
+                <a href="#contacto">Contacto</a>
             </nav>
 
             <div class="contenedor head">
@@ -30,7 +30,7 @@
 
         <main>
             <section class="contenedor" id="estudios">
-                <h2 class="subtitulo">Atributos</h2>
+                <h2 class="subtitulo">Estudios</h2>
                 <div class="contenedor-estudios">
                     <img src="img/construyendo.svg" alt="">
                     <div class="estudios-servicio">
@@ -93,7 +93,7 @@
             <div class="contenedor footer-content">
                 <div class="contact-us">
                     <h2 class="brand">Creando un mejor futuro</h2>
-                    <p>achicol1900@alumno.ipn.mx</p>
+                    <p>chico.lampart.ariadna@gmail.com</p>
                 </div>
                 <div class="social-media">
                     <a href="https://www.google.com/" class="social-media-icon">
