--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <section id="certificados">
                 <div class="contenedor2">
                     <aside>
-                        <h3 class="titulo">Certificados</h3>
+                        <h3 class="titulo2">Certificados</h3>
                         <nav class="indice">
                             <a href="#actanac">Acta de Nacimiento</a>
                             <a href="#curp">CURP</a>
