enlaces para el index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="header" id="inicio">
             <img src="img/abrir.svg" alt="" class="open">
             <nav class="menu-navegacion">
-                <a href="#datos">Sobre mí</a>
+                <a href="#datos">Portafolio</a>
                 <a href="#hobbies">Hobbies</a>
                 <a href="#certificados">Certificados</a>
                 <a href="#aptitudes">Habilidades</a>
@@ -32,25 +32,46 @@
 
         <main>
             <section class="contenedor" id="datos">
-                <h2 class="subtitulo">Sobre mí</h2>
+                <h2 class="subtitulo">Portafolio</h2>
+                <br>
+                <br>
+                <br>
                 <div class="contenedor-estudios">
-                    <img src="img/uwu.png" alt="">
+                    <!-- <img src="img/uwu.png" alt=""> -->
                     <div class="estudios-servicio">
                         <div class="estudios">
-                            <h3 class="a-estudios"><span class="number1">1 </span>Cómo me llamo y mi edad</h3>
-                            <p>Mi nombre completo es Ariadna Chico Lampart, tengo 16 años y cumpliré 17 en dos meses. Voy en bachillerato y estudio programación en el Centro de Estudios Científicos y Tecnológicos 9, "Juan de Dios Bátiz".</p>
+                            <h3 class="a-estudios""><span class="number1">1 </span>Animaciones</h3>
+                            <a href="animacion.html">Link a la página de animaciones</a>
+                            </div>
+                    </div>
+                    <div class="estudios-servicio">
+                        <div class="estudios">
+                            <h3 class="a-estudios"><span class="number1">2 </span>Menú Hover</h3>
+                            <a href="hoverMenu.html">Link al menú con hover</a>
                         </div>
                     </div>
                     <div class="estudios-servicio">
                         <div class="estudios">
-                            <h3 class="a-estudios"><span class="number1">2 </span>Lo que me gusta hacer</h3>
-                            <p>En mis tiempos libres me gusta escuchar música, ver Netflix, estudiar programación, dibujar (el gato son el sombrero de Link que está arriba lo hice yo ฅ(⌯• ɪ •⌯)ฅ~❣), cocinar y jugar videojuegos. Antes veía mucho anime, pero gracias a la escuela ya no tengo el tiempo ／(=u x u=)＼.</p>
+                            <h3 class="a-estudios"><span class="number1">3 </span>Colores hover</h3>
+                            <a href="coloresHover.html">Link a los colores con hover</a>
                         </div>
                     </div>
                     <div class="estudios-servicio">
                         <div class="estudios">
-                            <h3 class="a-estudios"><span class="number1">3 </span>A futuro...</h3>
-                            <p>A futuro me gustaría estudiar una carrera que trate sobre tecnología, aunque aún no sé cuál. Otra cosa que me gustaría mucho podría ser hacerme profesional en Valorant (un shooter táctico de habilidades ￣(•ㅅ•)￣).</p>
+                            <h3 class="a-estudios"><span class="number1">4 </span>Botones hover</h3>
+                            <a href="barra.html">Link a los botones con hover</a>
+                        </div>
+                    </div>
+                    <div class="estudios-servicio">
+                        <div class="estudios">
+                            <h3 class="a-estudios"><span class="number1">5 </span>Formulario</h3>
+                            <a href="formulario.html">Link al formulario con JS</a>
+                        </div>
+                    </div>
+                    <div class="estudios-servicio">
+                        <div >
+                            <h3 class="a-estudios"><span class="number1"></span></h3>
+                            <a href="formulario.html"></a>
                         </div>
                     </div>
                 </div>
