--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     <div class="estudios-servicio">
                         <div class="estudios">
                             <h3 class="a-estudios"><span class="number1">6 </span>Problema 1</h3>
-                            <a href="formulario.html">Link al problema 1 de PSW</a>
+                            <a href="problema01.html">Link al problema 1 de PSW</a>
                         </div>
                     </div>
                     <div class="estudios-servicio">
                         <div class="estudios">
                             <h3 class="a-estudios"><span class="number1">7 </span>Página de hobbies</h3>
-                            <a href="formulario.html">Link a la página de hobbies</a>
+                            <a href="hobbies.html">Link a la página de hobbies</a>
                         </div>
                     </div>
                 </div>
