no puse bien el enlace jaja

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="estudios-servicio">
                         <div class="estudios">
                             <h3 class="a-estudios"><span class="number1">7 </span>Página de hobbies</h3>
-                            <a href="paginaH/hobbies.html">Link a la página de hobbies</a>
+                            <a href="hobbies.html">Link a la página de hobbies</a>
                         </div>
                     </div>
                 </div>
