--- a/hobbies.html
+++ b/hobbies.html
@@ -54,7 +54,7 @@
                         jugadores, al comienzo del juego, pueden elegir ser un hermano o una hermana que se adentra en 
                         la aventura en búsqueda de su familia.
                     </p>
-                    <img src="img/hobbies/paimon.gif" alt="">
+                    <img src="img/hobbies/paimon.gif" alt="" class="img">
                 </div>
 
             </div>
