le meto un vídeo y ya ouo

--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/hobbies.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <title>ʕ•́ᴥ•̀ʔっ</title>
 </head>
@@ -54,12 +55,70 @@
                         jugadores, al comienzo del juego, pueden elegir ser un hermano o una hermana que se adentra en 
                         la aventura en búsqueda de su familia.
                     </p>
+                    <br>
                     <img src="img/hobbies/paimon.gif" alt="" class="img">
                 </div>
-
+                <div class="contenedor">
+                    <h2 class="subtitulo">Historia</h2>
+                    <p>
+                        Genshin Impact se desarrolla en el mundo de Teyvat, que está dividido en Siete Naciones: Mondstadt, Liyue, Inazuma, Sumeru, Fontaine, Natlan, Snezhnaya y Khaenri'ah. En la versión 1.0., los jugadores solo pueden recorrer las dos primeras regiones, Mondstadt y Liyue. Cada región está inspirada en una zona del mundo real, e incorpora elementos estéticos de esas zonas. Por ejemplo, Mondstadt está inspirado en una Alemania medieval, y Liyue en una China tradicional.
+                        <br>
+                        Cada región está asociada a un Arconte, y a su vez, cada Arconte está ligado a uno de los siete elementos. En ocasiones, los Arcontes eligen a alguna persona que ha logrado una gran hazaña o ha superado una gran dificultad, y les otorga una Visión, una gema mágica que les proporciona el control sobre un elemento. A la hora de jugar, cada personaje jugable (a excepción del Viajero) es poseedor de una.
+                    </p>    
+                </div>
             </div>
         </section>
+        <section class="contenedor">
+            <h2 class="subtitulo">Algunos personajes son:</h2>
+            <section class="especialidades">
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/diluc2.png" alt="">
+                    <h3 class="a-experto">Diluc</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/amber2.png" alt="">
+                    <h3 class="a-experto">Amber</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/lisa2.png" alt="">
+                    <h3 class="a-experto">Lisa</h3>
+                </div><div class="cont-esp">
+                    <img src="img/hobbies/per/kaeya2.png" alt="">
+                    <h3 class="a-experto">Kaeya</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/jean2.png" alt="">
+                    <h3 class="a-experto">Jean</h3>
+                </div>
+            </section>
+        </section>
     </main>
-
+    <footer id="contacto">
+        <div class="contenedor footer-content">
+            <div class="contact-us">
+                <h2 class="brand">Chico Lampart Ariadna</h2>
+                <p>4IV7</p>
+            </div>
+            <div class="social-media">
+                <a href="https://www.facebook.com/Genshinimpact/" class="social-media-icon">
+                    <i class='bx bxl-facebook-circle'></i>
+                </a>
+                <a href="https://www.instagram.com/genshinimpact/" class="social-media-icon">
+                    <i class='bx bxl-instagram' ></i>
+                </a>
+                <a href="https://twitter.com/GenshinImpact" class="social-media-icon">
+                    <i class='bx bxl-twitter' ></i>
+                </a>
+                <a href="http://www.youtube.com/c/GenshinImpact" class="social-media-icon">
+                    <i class='bx bxl-youtube'></i>
+                </a>
+                <a href="https://discord.gg/genshinimpact" class="social-media-icon">
+                    <i class='bx bxl-discord' ></i>
+                </a>
+                <a href="https://www.reddit.com/r/Genshin_Impact" class="social-media-icon">
+                    <i class='bx bxl-reddit' ></i>
+                </a>
+            </div>
+        </div>
 </body>
 </html>
