--- a/hobbies.html
+++ b/hobbies.html
@@ -56,7 +56,7 @@
                         la aventura en búsqueda de su familia.
                     </p>
                     <br>
-                    <img src="img/hobbies/paimon.gif" alt="" class="img">
+                    <video class="video" src="img/hobbies/inicio.mp4" width="640" height="480" autoplay muted loop></video>
                 </div>
                 <div class="contenedor">
                     <h2 class="subtitulo">Historia</h2>
@@ -65,6 +65,7 @@
                         <br>
                         Cada región está asociada a un Arconte, y a su vez, cada Arconte está ligado a uno de los siete elementos. En ocasiones, los Arcontes eligen a alguna persona que ha logrado una gran hazaña o ha superado una gran dificultad, y les otorga una Visión, una gema mágica que les proporciona el control sobre un elemento. A la hora de jugar, cada personaje jugable (a excepción del Viajero) es poseedor de una.
                     </p>    
+                    <video class="video" src="img/hobbies/caminando.mp4" width="640" height="480" autoplay muted loop></video>
                 </div>
             </div>
         </section>
