pagina de hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -91,14 +91,30 @@
                     <img src="img/hobbies/per/jean2.png" alt="">
                     <h3 class="a-experto">Jean</h3>
                 </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/venti.png" alt="">
+                    <h3 class="a-experto">Venti</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/diona.png" alt="">
+                    <h3 class="a-experto">Diona</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/sucrose.png" alt="">
+                    <h3 class="a-experto">Sucrose</h3>
+                </div>
+                <div class="cont-esp">
+                    <img src="img/hobbies/per/bennet.png" alt="">
+                    <h3 class="a-experto">Bennett</h3>
+                </div>
             </section>
         </section>
     </main>
     <footer id="contacto">
         <div class="contenedor footer-content">
             <div class="contact-us">
-                <h2 class="brand">Chico Lampart Ariadna</h2>
-                <p>4IV7</p>
+                <h2 class="brand">Redes del Genshin</h2>
+                <p>Chico Lampart Ariadna, 4IV7</p>
             </div>
             <div class="social-media">
                 <a href="https://www.facebook.com/Genshinimpact/" class="social-media-icon">
