link al menu de los problemas con JS

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
                             <a href="hobbies.html">Link a la página de hobbies</a>
                         </div>
                     </div>
+                    <div class="estudios-servicio">
+                        <div class="estudios">
+                            <h3 class="a-estudios"><span class="number1">8 </span>Menú de los problemas con JS</h3>
+                            <a href="problemas.html">Link al menú</a>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section class="Hobbies" id="hobbies">
