--- a/problema6.html
+++ b/problema6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ʕ  •`ᴥ•´ʔ</title>
+    <title>Problema 6</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="js/problemas1.js" ></script>
@@ -12,13 +12,13 @@
 <body>
 
     <form method="get" class="formulario" name="formulario" id="formulario"
-        action="problemas1.html" onsubmit="return validar(this)">
+        action="problema6.html" onsubmit="return validar(this)">
 
-        <h1 class="titulo">Problemas (1-5)</h1>
+        <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
             <tr class="p-titulo">
-                <th colspan="3">Problema 1</th>
+                <th colspan="3">Problema 6</th>
             </tr>
             <tr>
                 <td colspan="2">
@@ -48,10 +48,6 @@
                     name="enviar" onclick="operacion()"></td>
             </tr>
         </table>
-
-        <!-- <input type="submit" class="formulario-submit" value="Enviar datos">
-        <a href="index.html" class="formulario-submit">Página principal</a> -->
-
     </form>
 
     <script src="js/problemas1.js" type="text/javascript"></script>
