--- a/problema1.html
+++ b/problema1.html
@@ -7,7 +7,7 @@
     <title>Problema 1</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="js/problemas1.js" ></script>
+    <script src="js\problema1.js" ></script>
 </head>
 <body>
 
@@ -27,30 +27,25 @@
                 </td>
             </tr>
             <tr>
-                <th class="contenedor">Primer número</th>
+                <th class="contenedor">Capital invertida</th>
                 <td><input type="text" class="formulario-input" name="numero1"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Segundo número</th>
-                <td><input type="text" class="formulario-input" name="numero2"
-                    id="p1-numero2" onkeypress="return validarn(event)"></td>
-            </tr>
-            <tr>
-                <th class="contenedor">Resultado</th>
+                <th class="contenedor">Ganancia</th>
                 <td><input type="text" class="formulario-input" name="resultado"
                     id="resultado1" readonly="readonly"></td>
             </tr>
             <tr>
                 <td><input type="button" value="Borrar" class="formulario-submit"
                     name="borrard" onclick="borrar()"></td>
-                <td><input type="button" value="Operacion"  class="formulario-submit"
+                <td><input type="button" value="Calcular ganacias"  class="formulario-submit"
                     name="enviar" onclick="operacion()"></td>
             </tr>
         </table>
     </form>
 
-    <script src="js/problemas1.js" type="text/javascript"></script>
+    <script src="js/problema1.js" type="text/javascript"></script>
 
 </body>
 </html>
