--- a/problema1.html
+++ b/problema1.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <th class="contenedor">Ganancia</th>
-                <td><input type="text" class="formulario-input" name="resultado"
+                <td><input type="text" class="formulario-respuesta" name="resultado"
                     id="resultado1" readonly="readonly"></td>
             </tr>
             <tr>
