--- a/problema2.html
+++ b/problema2.html
@@ -31,27 +31,33 @@
             </tr>
             <tr>
                 <th class="contenedor">Sueldo base</th>
+                <td><input type="text" class="formulario-input" name="sueldo"
+                    id="p1-numero1" onkeypress="return validarn(event)"></td>
+            </tr>
+            <tr>
+                <th colspan="2">
+                    Precio de las ventas
+                    <br>
+                </th>
+            </tr>
+            <tr>
+                <th class="contenedor">Primera venta</th>
                 <td><input type="text" class="formulario-input" name="numero1"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Ganancia de la primera venta</th>
-                <td><input type="text" class="formulario-input" name="numero1"
+                <th class="contenedor">Segunda venta</th>
+                <td><input type="text" class="formulario-input" name="numero2"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Ganancia de la segunda venta</th>
-                <td><input type="text" class="formulario-input" name="numero1"
-                    id="p1-numero1" onkeypress="return validarn(event)"></td>
-            </tr>
-            <tr>
-                <th class="contenedor">Ganancia de la tercera venta</th>
-                <td><input type="text" class="formulario-input" name="numero1"
+                <th class="contenedor">Tercera venta</th>
+                <td><input type="text" class="formulario-input" name="numero3"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
                 <th class="contenedor">Total recibido</th>
-                <td><input type="text" class="formulario-input" name="resultado"
+                <td><input type="text" class="formulario-respuesta" name="resultado"
                     id="resultado1" readonly="readonly"></td>
             </tr>
             <tr>
