--- a/problema3.html
+++ b/problema3.html
@@ -7,7 +7,7 @@
     <title>Problema 6</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="js/problemas1.js" ></script>
+    <script src="js/prob/problemas3.js" ></script>
 </head>
 <body>
 
@@ -18,26 +18,23 @@
         
         <table class="default">
             <tr class="p-titulo">
-                <th colspan="3">Problema 6</th>
+                <th colspan="3">Problema 3</th>
             </tr>
             <tr>
                 <td colspan="2">
-                    Leer dos números: si son iguales, que los multiplique. Si el primero es mayor
-                    que el segundo, que los reste; y si no, que los sume.
+                    Una tienda ofrece un descuento del 15% sobre el total de la compra y un cliente desea saber
+                    cuánto deberá pagar finalmente por su compra: 
+                    <br>
+                    <br>
                 </td>
             </tr>
             <tr>
-                <th class="contenedor">Primer número</th>
+                <th class="contenedor">Costo sin descuento</th>
                 <td><input type="text" class="formulario-input" name="numero1"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Segundo número</th>
-                <td><input type="text" class="formulario-input" name="numero2"
-                    id="p1-numero2" onkeypress="return validarn(event)"></td>
-            </tr>
-            <tr>
-                <th class="contenedor">Resultado</th>
+                <th class="contenedor">Total de compra</th>
                 <td><input type="text" class="formulario-respuesta" name="resultado"
                     id="resultado1" readonly="readonly"></td>
             </tr>
@@ -50,7 +47,7 @@
         </table>
     </form>
 
-    <script src="js/problemas1.js" type="text/javascript"></script>
+    <script src="js/prob/problema3.js" type="text/javascript"></script>
 
 </body>
 </html>
