--- a/problema5.html
+++ b/problema5.html
@@ -4,41 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problema 6</title>
+    <title>Problema 5</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="js/problemas1.js" ></script>
+    <script src="js/prob/problema5.js" ></script>
 </head>
 <body>
 
     <form method="get" class="formulario" name="formulario" id="formulario"
-        action="problema6.html" onsubmit="return validar(this)">
+        action="problema5.html" onsubmit="return validar(this)">
 
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
             <tr class="p-titulo">
-                <th colspan="3">Problema 6</th>
+                <th colspan="3">Problema 5</th>
             </tr>
             <tr>
                 <td colspan="2">
-                    Leer dos números: si son iguales, que los multiplique. Si el primero es mayor
-                    que el segundo, que los reste; y si no, que los sume.
+                    Un maestro desea saber qué porcentaje de hombres y qué porcentaje 
+                    de mujeres hay en un grupo de estudiantes:
+                    <br>
+                    <br>
                 </td>
             </tr>
             <tr>
-                <th class="contenedor">Primer número</th>
+                <th class="contenedor">Cantidad de mujeres: </th>
                 <td><input type="text" class="formulario-input" name="numero1"
                     id="p1-numero1" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Segundo número</th>
+                <th class="contenedor">Cantidad de hombres: </th>
                 <td><input type="text" class="formulario-input" name="numero2"
                     id="p1-numero2" onkeypress="return validarn(event)"></td>
             </tr>
             <tr>
-                <th class="contenedor">Resultado</th>
+                <th colspan="2">
+                    Porcentajes: 
+                    <br>
+                    <br>
+                </th>
+            </tr>
+            <tr>
+                <th class="contenedor">Mujeres: </th>
                 <td><input type="text" class="formulario-respuesta" name="resultado"
+                    id="resultado1" readonly="readonly"></td>
+            </tr>
+            <tr>
+                <th class="contenedor">Hombres: </th>
+                <td><input type="text" class="formulario-respuesta" name="resultado2"
                     id="resultado1" readonly="readonly"></td>
             </tr>
             <tr>
@@ -50,7 +64,7 @@
         </table>
     </form>
 
-    <script src="js/problemas1.js" type="text/javascript"></script>
+    <script src="js/prob/problemas1.js" type="text/javascript"></script>
 
 </body>
 </html>
