enlaces para el menu

--- a/problema1.html
+++ b/problema1.html
@@ -12,8 +12,9 @@
 <body>
 
     <form method="get" class="formulario" name="formulario" id="formulario"
-        action="prob/problema6.html" onsubmit="return validar(this)">
-
+        action="prob/problema1.html" onsubmit="return validar(this)">
+        
+        <a href="problemas.html" class="formulario-submit">Volver al menú de problemas con JS</a>
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
