--- a/problema2.html
+++ b/problema2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problema 6</title>
+    <title>Problema 2</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="js/prob/problema2.js" ></script>
@@ -12,8 +12,9 @@
 <body>
 
     <form method="get" class="formulario" name="formulario" id="formulario"
-        action="problema6.html" onsubmit="return validar(this)">
-
+        action="problema2.html" onsubmit="return validar(this)">
+        
+        <a href="problemas.html" class="formulario-submit">Volver al menú de problemas con JS</a>
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
