--- a/problema6.html
+++ b/problema6.html
@@ -14,6 +14,7 @@
     <form method="get" class="formulario" name="formulario" id="formulario"
         action="problema6.html" onsubmit="return validar(this)">
 
+        <a href="problemas.html" class="formulario-submit">Volver al menú de problemas con JS</a>
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
