--- a/problemas.html
+++ b/problemas.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/problemas1.css">
+    <title>Menú de problemas</title>
 </head>
 <body>
-    <h1>xd</h1>
+    <br>
+    <br>
+    <h1 class="titulo">Problemas con JS</h1>
+    <div class="contenedor2"> 
+        <a href="problema1.html" class="formulario-submit2"> Ver el problema número 1</a>
+        <a href="problema2.html" class="formulario-submit2"> Ver el problema número 2</a>
+        <a href="problema3.html" class="formulario-submit2"> Ver el problema número 3</a>
+        <a href="problema4.html" class="formulario-submit2"> Ver el problema número 4</a>
+        <a href="problema5.html" class="formulario-submit2"> Ver el problema número 5</a>
+        <a href="problema6.html" class="formulario-submit2"> Ver el problema número 6</a>
+        <a href="problema7.html" class="formulario-submit2"> Ver el problema número 7</a>
+        <a href="problema8.html" class="formulario-submit2"> Ver el problema número 8</a>
+        <a href="problema9.html" class="formulario-submit2"> Ver el problema número 9</a>
+        <a href="problema10.html"class="formulario-submit2">Ver el problema número 10</a>
+    </div>
 </body>
 </html>
