--- a/problema10.html
+++ b/problema10.html
@@ -14,6 +14,7 @@
     <form method="get" class="formulario" name="formulario" id="formulario"
         action="problema7.html" onsubmit="return validar(this)">
 
+        <a href="problemas.html" class="formulario-submit">Volver al menú de problemas con JS</a>
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
@@ -60,6 +61,7 @@
     </form>
 
     <script src="js/prob/problema10.js" type="text/javascript"></script>
+
 
 </body>
 </html>
