--- a/problema3.html
+++ b/problema3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problema 6</title>
+    <title>Problema 3</title>
     <link rel="stylesheet" href="css/problemas1.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="js/prob/problemas3.js" ></script>
@@ -14,6 +14,7 @@
     <form method="get" class="formulario" name="formulario" id="formulario"
         action="problema6.html" onsubmit="return validar(this)">
 
+        <a href="problemas.html" class="formulario-submit">Volver al menú de problemas con JS</a>
         <h1 class="titulo">Problemas (1-10)</h1>
         
         <table class="default">
