problemas con js completo

--- a/problemas.html
+++ b/problemas.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <br>
-    <br>
     <h1 class="titulo">Problemas con JS</h1>
     <div class="contenedor2"> 
         <a href="problema1.html" class="formulario-submit2"> Ver el problema número 1</a>
@@ -23,5 +22,7 @@
         <a href="problema9.html" class="formulario-submit2"> Ver el problema número 9</a>
         <a href="problema10.html"class="formulario-submit2">Ver el problema número 10</a>
     </div>
+    <img src="img/javascript.png" alt="" class="img2">
+    <a href="index.html"class="formulario-submit">Volver al portafolio</a>
 </body>
 </html>
