espacio en el problema 2

--- a/problema2.html
+++ b/problema2.html
@@ -37,7 +37,9 @@
             </tr>
             <tr>
                 <th colspan="2">
-                    Precio de las ventas
+                    Precio de las ventas:
+                    <br>
+                    <br>
                     <br>
                 </th>
             </tr>
