un montón de cosas que no recuerdo haber cambiado

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <header class="header" id="inicio">
             <img src="img/abrir.svg" alt="" class="open">
             <nav class="menu-navegacion">
-                <a href="#datos">Portafolio</a>
-                <a href="#hobbies">Hobbies</a>
+                <a href="#datos">   Portafolio  </a>
+                <a href="#hobbies"> Hobbies     </a>
                 <a href="#certificados">Certificados</a>
-                <a href="#aptitudes">Habilidades</a>
-                <a href="#contacto">Contacto</a>
+                <a href="#aptitudes">   Habilidades </a>
+                <a href="#contacto">    Contacto    </a>
             </nav>
 
             <div class="contenedor head">
@@ -40,7 +40,7 @@
                     <!-- <img src="img/uwu.png" alt=""> -->
                     <div class="estudios-servicio">
                         <div class="estudios">
-                            <h3 class="a-estudios""><span class="number1">1 </span>Animaciones</h3>
+                            <h3 class="a-estudios"><span class="number1">1 </span>Animaciones</h3>
                             <a href="animacion.html">Link a la página de animaciones</a>
                             </div>
                     </div>
@@ -84,6 +84,12 @@
                         <div class="estudios">
                             <h3 class="a-estudios"><span class="number1">8 </span>Menú de los problemas con JS</h3>
                             <a href="problemas.html">Link al menú</a>
+                        </div>
+                    </div>
+                    <div class="estudios-servicio">
+                        <div class="estudios">
+                            <h3 class="a-estudios"><span class="number1">9 </span>Página de algoritmia</h3>
+                            <a href="algoritmia.html">Link al la página de algoritmia</a>
                         </div>
                     </div>
                 </div>
