--- a/algoritmia.html
+++ b/algoritmia.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problemas de Algoritmia</title>
     <link rel="stylesheet" href="./css/algoritmia.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&family=Indie+Flower&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <div class="container" >
         <div class="problema-container" >
             <h3 class="problema-title" >Problema 1</h3>
@@ -22,6 +25,7 @@
                 id="p1-input">
                 <button type="button" class="problema-button"
                 style="margin-top: 1rem;" onclick="problema1()" >Invertir</button>
+                <br>
                 <pre class="problema-output"
                 id="p1-output" >Esperando respuesta ...</pre>
 
@@ -34,18 +38,19 @@
             <h3 class="problema-title" >Problema 2</h3>
             <h4>
                 Dados 2 vectores  <em>v1 = (x1, x2, x3, ... xN), 
-                    v2 = (y1, y2, y3, ... yN)</em> y teniendo permitido 
+                    v2 = (y1, y2, y3, ... yN)</em>, y teniendo permitido 
                     permutar el orden de los elementos de dicho vector, 
-                    encontrar el minimo producto escalar entre ambos vectores
+                    encontrar el mínimo producto escalar entre ambos vectores.
+                    <br>
                     <br>
                     (El producto escalar se forma de la siguiente manera:
-                    <em> x1*y1 + x2*y2 + x3*y3 + ... + xN*yN </em>
+                    <em> (x1 * y1) + (x2 * y2) + (x3 * y3) + ... + (xN * yN) </em>
                     )
             </h4>
             <div class="problema-content" >
                 <div class="tablas" style="width: 100%; display: flex;
                 justify-content: center" >
-                <table class="problema-table" style="width: 40%;" >
+                <table class="problema-table" style="width: 40%;">
                     <thead>
                         <tr>
                             <th> <em>X</em> </th>
@@ -141,6 +146,7 @@
 
                 <button type="button" class="problema-button"
                 style="margin-top: 1rem;" onclick="problema2()" >Calcular</button>
+                <br>
                 <pre class="problema-output"
                 id="p2-output" >Esperando respuesta ...</pre>
 
@@ -152,11 +158,11 @@
         <div class="problema-container" >
             <h3 class="problema-title" >Problema 3</h3>
             <h4>
-                Dada una lista de palabras, encontrar la palabra que mas numero
-                de caracteres unicos tenga.
-                <br>
-                Ejempplo: CASA = 3 (c, a, s)   PERRO = 4 (p, e, r, o)
-                <br>
+                Dada una lista de palabras, encontrar la palabra que más números
+                de caracteres únicos tenga.
+                <br><br>
+                Ejemplo: CASA = 3 (c, a, s)   PERRO = 4 (p, e, r, o)
+                <br><br>
                 Considera solamente un alfabeto de la A-Z en mayusculas. 
                 <br>
                 Las palabras ingresadas deberan estar separadas por una coma, no 
@@ -168,6 +174,7 @@
                 id="p3-input">
                 <button type="button" class="problema-button"
                 style="margin-top: 1rem;" onclick="problema3()" >Calcular</button>
+                <br>
                 <pre class="problema-output"
                 id="p3-output" >Esperando respuesta ...</pre>
 
