--- a/algoritmia.html
+++ b/algoritmia.html
@@ -182,6 +182,10 @@
         </div>
     </div>
 
+    <br><br><br>
+    <a href="index.html" class="index"> Volver al portafolio </a>
+    <br><br><br><br>
+
     <script src="./JS/algoritmia.js" ></script>
 
 
