me faltó un acento xd

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <a href="#curp">CURP</a>
                             <a href="#certsec">Secundaria</a>
                             <a href="#batiz">Media superior</a>
-                            <a href="#perritos">Si, ranas</a>
+                            <a href="#perritos">Sí, ranas</a>
                         </nav>
                     </aside>
                     <div class="contenido">
