no me encuentra el js :c

--- a/algoritmia.html
+++ b/algoritmia.html
@@ -186,7 +186,7 @@
     <a href="index.html" class="index"> Volver al portafolio </a>
     <br><br><br><br>
 
-    <script src="./JS/algoritmia.js" ></script>
+    <script src="./js/algoritmia.js" ></script>
 
 
 </body>
