--- a/algoritmia.html
+++ b/algoritmia.html
@@ -171,7 +171,7 @@
             <div class="problema-content" >
                 <input type="text" class="problema-input" 
                 placeholder="Ingresa las palabras separadas por una coma"
-                id="p3-input">
+                id="p3-input" required>
                 <button type="button" class="problema-button"
                 style="margin-top: 1rem;" onclick="problema3()" >Calcular</button>
                 <br>
