--- a/ServletHolaMundo/web/index.html
+++ b/ServletHolaMundo/web/index.html
@@ -54,7 +54,7 @@
                 <input class="boton" type="submit" value="Consultar Tabla General de Usuarios" >
             </form>
 
-            <form method="get" name="formularioconsultar" action="Consultar">
+            <form method="get" name="formulariogestionar" action="Actualizar">
                 <input class="boton" type="submit" value="Gestionar Tabla General de Usuarios" >
             </form>
         </div>
