cambios en el css

--- a/ServletHolaMundo/web/index.html
+++ b/ServletHolaMundo/web/index.html
@@ -49,14 +49,6 @@
 
         <br>
 
-        <div class="container">
-            <form method="get" name="formularioconsultar" action="Consultar">
-                <input class="boton" type="submit" value="Consultar Tabla General de Usuarios" >
-            </form>
-        </div>
-
-        <br>
-
         <div class="container" >
             <form method="post" name="formularioeliminar" action="Eliminar">
                 <label>Ingresa el ID del usuario que deseas eliminar</label>
@@ -76,6 +68,12 @@
         </div>
 
         <br>
+
+        <div class="container centrar">
+            <form method="get" name="formularioconsultar" action="Consultar">
+                <input class="boton" type="submit" value="Consultar Tabla General de Usuarios" >
+            </form>
+        </div>
 
 
         <!-- <div class="actualizar container" >
