no se que le pasa al JS :c

--- a/ServletHolaMundo/web/index.html
+++ b/ServletHolaMundo/web/index.html
@@ -60,7 +60,7 @@
         <br>
 
         <div class="container">
-            <form method="get" name="formulariogestionar" action="Actualizar">
+            <form method="post" name="formulariogestionar" action="Actualizar">
                 <label>Ingresa el ID del usuario que deseas cambiar</label>
                 <input type="number" name="idactualizar" id="actualizar" min="01" max="99" size="2"  >
                 <input class="boton ingresar" type="submit" value="Gestionar Usuario" onclick="gestionar()">
